[sv-SE] update from Pootle (firefox)

--- a/sv-SE/browser/chrome/browser/accounts.properties
+++ b/sv-SE/browser/chrome/browser/accounts.properties
@@ -12,25 +12,35 @@ upgradeToFxA.accessKey = U
 
 # LOCALIZATION NOTE (signInAfterUpgradeOnOtherDevice.description)
 # %S = Email address of user's Firefox Account
+signInAfterUpgradeOnOtherDevice.description = Sync uppgraderades på en annan enhet av %S. Återuppta synkronisering?
 signInAfterUpgradeOnOtherDevice.label = Logga in
 signInAfterUpgradeOnOtherDevice.accessKey = L
 
 # LOCALIZATION NOTE (needVerifiedUserShort, needVerifiedUserLong)
 # %S = Email address of user's Firefox Account
-needVerifiedUserLong = Klicka på verifikationslänken i e-posten som skickats till %S
+needVerifiedUserShort = %S är inte verifierad
+needVerifiedUserLong = Klicka på verifieringslänken i mejlet som skickats till %S
 
+resendVerificationEmail.label = Skicka igen
+resendVerificationEmail.accessKey = S
 
+forgetMigration.label = Glöm
+forgetMigration.accessKey = G
 
+unlinkMigration.label = Länka inte Sync
+unlinkMigration.accessKey = L
 
-unlinkVerificationConfirm = Avregistrera
+unlinkVerificationTitle = Ta bort länken från en gammal version av Sync?
+unlinkVerificationDescription = Om du inte längre vill bli påmind om uppgradering av Sync kan du bryta länken från ditt gamla Sync-konto för att ta bort den.
+unlinkVerificationConfirm = Ta bort länk
 
 # These strings are used in a dialog we display after the user requests we resend
 # a verification email.
-verificationSentTitle = Verifikation skickad
+verificationSentTitle = Verifiering skickad
 # LOCALIZATION NOTE (verificationSentHeading) - %S = Email address of user's Firefox Account
-verificationSentHeading = En verifikationslänk har skickats till %S
+verificationSentHeading = En verifieringslänk har skickats till %S
 verificationSentDescription = Kontrollera din e-post och klicka på länken för att börja synka.
 
-verificationNotSentTitle = Det gick inte att skicka verifikationen
-verificationNotSentHeading = Vi kan inte skicka en e-post för verifikation just nu.\u0020
+verificationNotSentTitle = Det gick inte att skicka verifiering
+verificationNotSentHeading = Vi kan inte skicka en verifieringsmejlet just nu
 verificationNotSentDescription = Försök på nytt senare.
