[es-MX] update from Pootle (firefox)

--- a/es-MX/browser/chrome/browser/browser.properties
+++ b/es-MX/browser/chrome/browser/browser.properties
@@ -2,7 +2,7 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-nv_timeout=Tiempo máximo transcurrido
+nv_timeout=Tiempo excedido
 openFile=Abrir archivo
 
 droponhometitle=Elegir página de inicio
@@ -74,7 +74,7 @@ lwthemeInstallRequest.allowButton.accesskey=P
 
 lwthemePostInstallNotification.message=Se ha instalado un nuevo tema.
 lwthemePostInstallNotification.undoButton=Deshacer
-lwthemePostInstallNotification.undoButton.accesskey=U
+lwthemePostInstallNotification.undoButton.accesskey=D
 lwthemePostInstallNotification.manageButton=Administrar temas…
 lwthemePostInstallNotification.manageButton.accesskey=A
 
@@ -92,8 +92,8 @@ popupWarningButton=Opciones
 popupWarningButton.accesskey=O
 popupWarningButtonUnix=Preferencias
 popupWarningButtonUnix.accesskey=P
-popupAllow=Permitir abrir ventanas emergentes a %S
-popupBlock=Bloquear ventanas emergentes a %S
+popupAllow=Permitir ventanas emergentes de %S
+popupBlock=Bloquear ventanas emergentes de %S
 popupWarningDontShowFromMessage=No mostrar este mensaje cuando se bloqueen ventanas emergentes
 popupWarningDontShowFromLocationbar=No mostrar barra de información cuando las ventanas emergentes están bloqueadas
 popupShowPopupPrefix=Mostrar '%S'
@@ -117,7 +117,7 @@ crashedpluginsMessage.learnMore=Saber más…
 # whether he rather wanted to visit the host.  %S is the recognized host.
 keywordURIFixup.message=¿Quizá querías ir a %S?
 keywordURIFixup.goTo=Si, llévame a %S
-keywordURIFixup.goTo.accesskey=Y
+keywordURIFixup.goTo.accesskey=S
 keywordURIFixup.dismiss=No, gracias
 keywordURIFixup.dismiss.accesskey=N
 
