--- a/id/toolkit/chrome/global/charsetMenu.properties
+++ b/id/toolkit/chrome/global/charsetMenu.properties
@@ -74,7 +74,7 @@ windows-1251     = Cyrillic (Windows)
 ISO-8859-5       = Cyrillic (ISO)
 KOI8-R           = Cyrillic (KOI8-R)
 KOI8-U           = Cyrillic (KOI8-U)
-IBM866           = Cyrillic (DOS)
+IBM866           = Cyrillik (DOS)
 
 # Greek
 windows-1253.key = G
