[id] update from Pootle (firefox)

--- a/id/toolkit/chrome/mozapps/update/updates.properties
+++ b/id/toolkit/chrome/mozapps/update/updates.properties
@@ -19,8 +19,8 @@ updateMoreInfoContentDownloading=Mengunduh keterangan tentang %S %S…
 # %2$S is the update version - provided by the update xml. Ex: version 10.0.5
 # %3$S is the build identifier - provided by the update xml. Ex: 20081022033543
 updateNightlyName=%1$S %2$S %3$S nightly
-incompatAddons_major=Beberapa pengaya Anda tidak akan bekerja dengan %1$S %2$S dan akan dimatikan. Segera setelah pengaya tersebut telah kompatibel, %S akan memutakhirkan dan mengaktifkan kembali pengaya berikut:
-incompatAddons_minor=Beberapa pengaya Anda tidak akan bekerja dengan pemutakhiran ini. Segera setelah pengaya tersebut telah kompatibel, %S akan memutakhirkan dan mengaktifkan kembali pengaya berikut:
+incompatAddons_major=Beberapa pengaya Anda tidak akan bekerja dengan %1$S %2$S dan akan dimatikan. Segera setelah pengaya tersebut telah kompatibel, %1$S akan memutakhirkan dan mengaktifkan kembali pengaya berikut:
+incompatAddons_minor=Beberapa pengaya Anda tidak akan bekerja dengan pemutakhiran ini. Segera setelah pengaya tersebut telah kompatibel, %1$S akan memutakhirkan dan mengaktifkan kembali pengaya berikut:
 intro_major=Anda ingin memperbarui ke versi %1$S %2$S sekarang?
 intro_minor=Pemutakhiran keamanan dan stabilitas untuk %1$S kini tersedia:
 
