[si] update from Pootle (firefox)

--- a/si/browser/chrome/browser/devtools/debugger.properties
+++ b/si/browser/chrome/browser/devtools/debugger.properties
@@ -13,10 +13,11 @@
 # LOCALIZATION NOTE (ToolboxDebugger.label):
 # This string is displayed in the title of the tab when the debugger is
 # displayed inside the developer tools window and in the Developer Tools Menu.
-ToolboxDebugger.label=Debugger
+ToolboxDebugger.label=නිදොස්කරන
 
 # LOCALIZATION NOTE (ToolboxDebugger.panelLabel):
 # This is used as the label for the toolbox panel.
+ToolboxDebugger.panelLabel=නිදොස්කරන පැනලය
 
 # LOCALIZATION NOTE (DebuggerWindowTitle):
 # The title displayed for the debugger window.
