Translation of new strings 3.1 + removing obsolete

--- a/uk/dom/chrome/dom/dom.properties
+++ b/uk/dom/chrome/dom/dom.properties
@@ -18,48 +18,48 @@ OnBeforeUnloadStayButton=Лишитись на сторінці
 OnBeforeUnloadLeaveButton=Покинути сторінку
 UnexpectedCanvasVariantStyle=canvas: спроба встановити strokeStyle чи fillStyle у значення, що не є рядком,  CanvasGradient, чи CanvasPattern було проігноровано.
 EmptyGetElementByIdParam=Пустий рядок було передано у getElementById().
-LowMemoryTitle=Попередження: мало пам’яті
+LowMemoryTitle=Попередження: недостатньо пам’яті
 LowMemoryMessage=Скрипт на цій сторінці був зупинений через брак пам’яті.
 SpeculationFailed=An unbalanced tree was written using document.write() causing data from the network to be reparsed. For more information https://developer.mozilla.org/en/Optimizing_Your_Pages_for_Speculative_Parsing
 DocumentWriteIgnored=A call to document.write() from an asynchronously-loaded external script was ignored.
-FormValidationTextTooLong=Please shorten this text to %S characters or less (you are currently using %S characters).
-FormValidationValueMissing=Please fill out this field.
-FormValidationCheckboxMissing=Please check this box if you want to proceed.
-FormValidationRadioMissing=Please select one of these options.
-FormValidationFileMissing=Please select a file.
-FormValidationSelectMissing=Please select an item in the list.
-FormValidationInvalidEmail=Please enter an email address.
-FormValidationInvalidURL=Please enter a URL.
+FormValidationTextTooLong=Скоротіть цей текст до %S символів чи менше (зараз використовується %S символів).
+FormValidationValueMissing=Заповніть це поле.
+FormValidationCheckboxMissing=Якщо хочете продовжити, відмітьте тут.
+FormValidationRadioMissing=Виберіть одну з цих опцій.
+FormValidationFileMissing=Виберіть файл.
+FormValidationSelectMissing=Виберіть елемент у списку.
+FormValidationInvalidEmail=Введіть адресу електронної пошти.
+FormValidationInvalidURL=Введіть URL.
 FormValidationPatternMismatch=Please match the requested format.
 # LOCALIZATION NOTE (FormValidationPatternMismatchWithTitle): %S is the (possibly truncated) title attribute value.
 FormValidationPatternMismatchWithTitle=Please match the requested format: %S.
 # LOCALIZATION NOTE (FormValidationNumberRangeOverflow): %S is a number.
-FormValidationNumberRangeOverflow=Please select a value that is no more than %S.
+FormValidationNumberRangeOverflow=Виберіть значення не більше %S.
 # LOCALIZATION NOTE (FormValidationDateRangeOverflow): %S is a date.
-FormValidationDateRangeOverflow=Please select a value that is no later than %S.
+FormValidationDateRangeOverflow=Виберіть значення не пізніше за %S.
 # LOCALIZATION NOTE (FormValidationTimeRangeOverflow): %S is a time.
-FormValidationTimeRangeOverflow=Please select a value that is no later than %S.
+FormValidationTimeRangeOverflow=Виберіть значення не пізніше за %S.
 # LOCALIZATION NOTE (FormValidationNumberRangeUnderflow): %S is a number.
-FormValidationNumberRangeUnderflow=Please select a value that is no less than %S.
+FormValidationNumberRangeUnderflow=Виберіть значення не менше %S.
 # LOCALIZATION NOTE (FormValidationDateRangeUnderflow): %S is a date.
-FormValidationDateRangeUnderflow=Please select a value that is no earlier than %S.
+FormValidationDateRangeUnderflow=Виберіть значення не раніше за %S.
 # LOCALIZATION NOTE (FormValidationTimeRangeUnderflow): %S is a time.
-FormValidationTimeRangeUnderflow=Please select a value that is no earlier than %S.
+FormValidationTimeRangeUnderflow=Виберіть значення не раніше за %S.
 # LOCALIZATION NOTE (FormValidationStepMismatch): both %S can be a number, a date or a time.
-FormValidationStepMismatch=Please select a valid value. The two nearest valid values are %S and %S.
+FormValidationStepMismatch=Виберіть дійсне значення. Двома найближчими дійсними значеннями є %S та %S.
 # LOCALIZATION NOTE (FormValidationStepMismatchOneValue): %S can be a number, a date or a time. This is called instead of FormValidationStepMismatch when the second value is the same as the first.
-FormValidationStepMismatchOneValue=Please select a valid value. The nearest valid value is %S.
-FormValidationBadInputNumber=Please enter a number.
-GetAttributeNodeWarning=Use of getAttributeNode() is deprecated. Use getAttribute() instead.
-SetAttributeNodeWarning=Use of setAttributeNode() is deprecated. Use setAttribute() instead.
-GetAttributeNodeNSWarning=Use of getAttributeNodeNS() is deprecated. Use getAttributeNS() instead.
-SetAttributeNodeNSWarning=Use of setAttributeNodeNS() is deprecated. Use setAttributeNS() instead.
-RemoveAttributeNodeWarning=Use of removeAttributeNode() is deprecated. Use removeAttribute() instead.
-CreateAttributeWarning=Use of document.createAttribute() is deprecated. Use element.setAttribute() instead.
-CreateAttributeNSWarning=Use of document.createAttributeNS() is deprecated. Use element.setAttributeNS() instead.
-OwnerElementWarning=Use of attributes' ownerElement attribute is deprecated.
-NodeValueWarning=Use of attributes' nodeValue attribute is deprecated. Use value instead.
-TextContentWarning=Use of attributes' textContent attribute is deprecated. Use value instead.
+FormValidationStepMismatchOneValue=Виберіть дійсне значення. Найближчим дійсним значенням є %S.
+FormValidationBadInputNumber=Введіть число.
+GetAttributeNodeWarning=Метод getAttributeNode() застарів. Використайте натомість getAttribute().
+SetAttributeNodeWarning=Метод setAttributeNode() застарів. Використайте натомість setAttribute().
+GetAttributeNodeNSWarning=Метод getAttributeNodeNS() застарів. Використайте натомість getAttributeNS().
+SetAttributeNodeNSWarning=Метод setAttributeNodeNS() застарів. Використайте натомість setAttributeNS().
+RemoveAttributeNodeWarning=Метод removeAttributeNode() застарів. Використайте натомість removeAttribute().
+CreateAttributeWarning=Метод document.createAttribute() застарів. Використайте натомість element.setAttribute().
+CreateAttributeNSWarning=Метод document.createAttributeNS() застарів. Використайте натомість element.setAttributeNS().
+OwnerElementWarning=Властивість' ownerElement в атрибутах застаріла.
+NodeValueWarning=Властивість' nodeValue в атрибутах застаріла. Натомість використайте value.
+TextContentWarning=Властивість' textContent в атрибутах застаріла. Натомість використайте value.
 EnablePrivilegeWarning=Use of enablePrivilege is deprecated.  Please use code that runs with the system principal (e.g. an extension) instead.
 nsIJSONDecodeDeprecatedWarning=nsIJSON.decode is deprecated.  Please use JSON.parse instead.
 nsIJSONEncodeDeprecatedWarning=nsIJSON.encode is deprecated.  Please use JSON.stringify instead.
