--- a/uk/browser/pdfviewer/viewer.properties
+++ b/uk/browser/pdfviewer/viewer.properties
@@ -85,7 +85,7 @@ document_properties_close=Закрити
 # Tooltips and alt text for side panel toolbar buttons
 # (the _label strings are alt text for the buttons, the .title strings are
 # tooltips)
-toggle_sidebar.title=Перемкнути бічну панель
+toggle_sidebar.title=Бічна панель
 toggle_sidebar_label=Перемкнути бічну панель
 outline.title=Показувати схему документа
 outline_label=Схема документа
@@ -133,7 +133,7 @@ error_stack=Стек: {{stack}}
 error_file=Файл: {{file}}
 # LOCALIZATION NOTE (error_line): "{{line}}" will be replaced with a line number
 error_line=Рядок: {{line}}
-rendering_error=Під час рендеру сторінки сталась помилка.
+rendering_error=Під час виведення сторінки сталася помилка.
 
 # Predefined zoom values
 page_scale_width=За шириною
@@ -146,10 +146,10 @@ page_scale_percent={{scale}}%
 
 # Loading indicator messages
 loading_error_indicator=Помилка
-loading_error=Під час завантаження PDF сталась помилка.
+loading_error=Під час завантаження PDF сталася помилка.
 invalid_file_error=Недійсний або пошкоджений PDF-файл.
 missing_file_error=Відсутній PDF-файл.
-unexpected_response_error=Unexpected server response.
+unexpected_response_error=Неочікувана відповідь сервера.
 
 # LOCALIZATION NOTE (text_annotation_type.alt): This is used as a tooltip.
 # "{{type}}" will be replaced with an annotation type from a list defined in
