--- a/uk/dom/chrome/accessibility/AccessFu.properties
+++ b/uk/dom/chrome/accessibility/AccessFu.properties
@@ -3,8 +3,8 @@
 # You can obtain one at http://mozilla.org/MPL/2.0/.
 
 # Screen reader started/stopped
-screenReaderStarted = Screen reader started
-screenReaderStopped = Screen reader stopped
+screenReaderStarted = Зчитувач екрана запущено
+screenReaderStopped = Зчитувач екрана зупинено
 
 # Roles
 menubar        =       menu bar
@@ -75,52 +75,52 @@ term           =       term
 definition     =       definition
 
 # More sophisticated roles which are not actual numeric roles
-textarea       =       text area
+textarea       =       текстове поле
 
 # Text input types
-textInputType_date   =       date
+textInputType_date   =       дата
 textInputType_email  =       e-mail
-textInputType_search =       search
-textInputType_tel    =       telephone
+textInputType_search =       пошук
+textInputType_tel    =       телефон
 textInputType_url    =       URL
 
 # More sophisticated object descriptions
-headingLevel   =       heading level %S
+headingLevel   =       рівень заголовка %S
 
 # more sophisticated list announcement
-listStart      =       First item
-listEnd        =       Last item
+listStart      =       Перший елемент
+listEnd        =       Останній елемент
 # LOCALIZATION NOTE (listItemsCount): Semi-colon list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-listItemsCount =       1 item;#1 items
+listItemsCount =       1 елемент;#1 елемента;#1 елементів
 
 # LOCALIZATION NOTE: # %1$S is the position of the item n the set.
 # %2$S is the total number of such items in the set.
 # An expanded example would read "2 of 5".
-objItemOfN      =       %1$S of %2$S
+objItemOfN      =       %1$S із %2$S
 
 # Landmark announcements
-banner         =       banner
-complementary  =       complementary
-contentinfo    =       content info
-main           =       main
-navigation     =       navigation
-search         =       search
+banner         =       банер
+complementary  =       додатково
+contentinfo    =       інформація вмісту
+main           =       основний
+navigation     =       навігація
+search         =       пошук
 
 # LOCALIZATION NOTE (tblColumnInfo): Semi-colon list of plural forms.
 # Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tblColumnInfo = with 1 column;with #1 columns
+tblColumnInfo = з 1 стовпчиком;з #1 стовпчиками
 # LOCALIZATION NOTE (tblRowInfo): Semi-colon list of plural forms.
 # Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tblRowInfo = and 1 row;and #1 rows
+tblRowInfo = та 1 рядком;та #1 рядками
 
 # table or grid cell information
-columnInfo = Column %S
-rowInfo = Row %S
-spansColumns = spans %S columns
-spansRows = spans %S rows
+columnInfo = Стовпчик %S
+rowInfo = Рядок %S
+spansColumns = захоплює %S стовпчиків
+spansRows = захоплює %S рядків
 
 # Invoked actions
 jumpAction     =      jumped
@@ -140,32 +140,32 @@ cycleAction    =      cycled
 
 # Live regions
 # 'hidden' will be spoken when something disappears in a live region.
-hidden         =      hidden
+hidden         =      приховано
 
 # Tab states
-tabLoading     =      loading
-tabLoaded      =      loaded
-tabNew         =      new tab
-tabLoadStopped =      loading stopped
-tabReload      =      reloading
+tabLoading     =      завантаження
+tabLoaded      =      завантажено
+tabNew         =      нова вкладка
+tabLoadStopped =      завантаження зупинено
+tabReload      =      перезавантаження
 
 # Object states
-stateChecked     =    checked
-stateNotChecked  =    not checked
-statePressed     =    pressed
+stateChecked     =    відмічено
+stateNotChecked  =    не відмічено
+statePressed     =    натиснуто
 # No string for a not pressed toggle button
-stateExpanded    =    expanded
-stateCollapsed   =    collapsed
-stateUnavailable =    unavailable
-stateReadonly    =    readonly
-stateRequired    =    required
-stateTraversed   =    visited
-stateHasPopup    =    has pop up
-stateSelected    =    selected
+stateExpanded    =    розгорнуто
+stateCollapsed   =    згорнуто
+stateUnavailable =    недоступно
+stateReadonly    =    лише читання
+stateRequired    =    вимагається
+stateTraversed   =    відвідано
+stateHasPopup    =    має виринаюче вікно
+stateSelected    =    вибрано
 
 # App modes
-editingMode    =      editing
-navigationMode =      navigating
+editingMode    =      редагування
+navigationMode =      навігація
 
 # Quick navigation modes
 quicknav_Simple      = Default
