--- a/uk/dom/chrome/appstrings.properties
+++ b/uk/dom/chrome/appstrings.properties
@@ -30,6 +30,6 @@ externalProtocolChkMsg=Запам’ятати вибір для всіх пос
 externalProtocolLaunchBtn=Запустити програму
 malwareBlocked=Сайт %S відомий як зловмисний і тому був заблокований згідно з вашими вподобаннями безпеки.
 phishingBlocked=Сайт %S відомий як навмисна підробка, націлена на видурювання особистої або фінансової інформації.
-cspBlocked=This page has a content security policy that prevents it from being loaded in this way.
+cspBlocked=Ця сторінка має політику безпеки вмісту, яка не дозволяє їй бути завантаженою таким чином.
 corruptedContentError=Сторінка, котру ви намагаєтесь переглянути, не може бути показана — у передачі даних помічена помилка.
 remoteXUL=Ця сторінка використовує непідтримувану технологію, котра більше не доступна за промовчанням у Firefox.
