[hy-AM] update from Pootle (firefox)

--- a/hy-AM/browser/chrome/browser/loop/loop.properties
+++ b/hy-AM/browser/chrome/browser/loop/loop.properties
@@ -274,6 +274,7 @@ feedback_category_audio_quality=Ձայնի որակը
 feedback_category_video_quality=Տեսապատկերի որակը
 feedback_category_was_disconnected=Կապախզվել է
 feedback_category_confusing=Շփոթմունք
+feedback_category_other2=Այլ
 feedback_custom_category_text_placeholder=Ի՞նչը ընթացավ ոչ այնպես:
 feedback_submit_button=Ուղարկել
 feedback_back_button=Նախորդը
@@ -313,8 +314,8 @@ rooms_name_change_failed_label=Հնարավոր չէ վերանվանել
 rooms_new_room_button_label=Սկսել զրույց
 rooms_only_occupant_label=Դուք առաջինն եք այստեղ:
 rooms_panel_title=Ընտրեք զրույցը կամ սկսեք նորը
-rooms_room_full_label=Արդեն կան երկու անձ:
-rooms_room_full_call_to_action_nonFx_label=Ներբենեք {{brandShortname}}-ը՝ սկսելու համար ձեր սեփական
+rooms_room_full_label=Արդեն կա երկու անձ:
+rooms_room_full_call_to_action_nonFx_label=Ներբեռնել {{brandShortname}}-ը՝ սկսելու համար սեփական
 rooms_room_full_call_to_action_label=Մանրամասներ {{clientShortname}}-ի մասին »
 rooms_room_joined_label=Ինչ-որ մեկը միացել է զրույցին:
 rooms_room_join_label=Միանալ զրույցին
