Bug 1117577 - Bookmarks Manager > Tools > Restore > Choose file... does not recognize .json4lz

--- a/sk/suite/chrome/common/places/places.properties
+++ b/sk/suite/chrome/common/places/places.properties
@@ -20,7 +20,7 @@ bookmarksRestoreAlertTitle=Obnoviť záložky
 bookmarksRestoreAlert=Týmto nahradíte všetky svoje aktuálne záložky zálohou. Naozaj to chcete urobiť?
 bookmarksRestoreTitle=Vybrať zálohu záložiek
 bookmarksRestoreFilterName=JSON
-bookmarksRestoreFilterExtension=*.json
+bookmarksRestoreFilterExtension=*.json;*.jsonlz4
 
 bookmarksRestoreFormatError=Nepodporovaný typ súboru.
 bookmarksRestoreParseError=Nie je možné spracovať súbor zálohy.
