--- a/pl/browser/chrome/browser/devtools/debugger.properties
+++ b/pl/browser/chrome/browser/devtools/debugger.properties
@@ -219,3 +219,5 @@ functionSearchSeparatorLabel=←
 # The substitution parameter is the URL of the last paused window that must be
 # resumed first.
 resumptionOrderPanelTitle=Jeden lub wiele debugerów jest wstrzymanych. Należy najpierw przywrócić ostatnio wstrzymany debuger przy: %S
+
+evalGroupLabel=Interpretowane źródła
