Bug 1079216 - Improve some strings on the Loop feedback form

--- a/pl/browser/chrome/browser/loop/loop.properties
+++ b/pl/browser/chrome/browser/loop/loop.properties
@@ -125,12 +125,12 @@ powered_by_beforeLogo=Obsługiwane przez
 powered_by_afterLogo=
 
 feedback_call_experience_heading2=Jak oceniasz rozmowę?
-feedback_what_makes_you_sad=Co było problemem?
 feedback_thank_you_heading=Dziękujemy za opinię!
+feedback_category_list_heading=Co było problemem?
 feedback_category_audio_quality=Jakość dźwięku
 feedback_category_video_quality=Jakość obrazu
 feedback_category_was_disconnected=Zerwane połączenie
-feedback_category_confusing=Zagmatwanie
+feedback_category_confusing2=Zagmatwane elementy sterujące
 feedback_category_other2=Inny
 feedback_custom_category_text_placeholder=opis problemu
 feedback_submit_button=Wyślij
