Bug 1073935 - Prompt user when switching projects/creating new app if there are unsaved changes

--- a/pl/browser/chrome/browser/devtools/projecteditor.properties
+++ b/pl/browser/chrome/browser/devtools/projecteditor.properties
@@ -3,7 +3,7 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 projecteditor.confirmUnsavedTitle=Niezapisane zmiany
-projecteditor.confirmUnsavedLabel=Wprowadzone zmiany zostaną utracone, jeśli zamkniesz WebIDE - na pewno kontynuować?
+projecteditor.confirmUnsavedLabel2=Wprowadzone zmiany zostaną utracone - na pewno kontynuować?
 projecteditor.deletePromptTitle=Potwierdź usuwanie
 projecteditor.deleteFolderPromptMessage=Czy na pewno usunąć ten folder?
 projecteditor.deleteFilePromptMessage=Czy na pewno usunąć ten plik?
