--- a/pl/browser/chrome/browser/devtools/animationinspector.properties
+++ b/pl/browser/chrome/browser/devtools/animationinspector.properties
@@ -5,6 +5,7 @@
 player.animationNameLabel=Animacja:
 player.transitionNameLabel=Przejście
 player.animationDurationLabel=Czas trwania:
+player.animationDelayLabel=Opóźnienie:
 player.animationIterationCountLabel=Powtórzenia:
 player.infiniteIterationCount=&#8734;
 player.timeLabel=%S s
