Bug 1101569 - Adds an allTabs menu to the sidebar widget

--- a/pl/browser/chrome/browser/devtools/toolbox.properties
+++ b/pl/browser/chrome/browser/devtools/toolbox.properties
@@ -51,6 +51,9 @@ browserConsoleCmd.commandkey=j
 
 pickButton.tooltip=Wskaż element na stronie
 
+sidebar.showAllTabs.label=…
+sidebar.showAllTabs.tooltip=Wszystkie karty
+
 options.darkTheme.label=Ciemny
 options.lightTheme.label=Jasny
 
