Bug 1076764 - Added notifications for Loop contacts import

--- a/pl/browser/chrome/browser/loop/loop.properties
+++ b/pl/browser/chrome/browser/loop/loop.properties
@@ -56,6 +56,8 @@ valid_email_text_description=Proszę wprowadzić prawidłowy adres e-mail
 add_or_import_contact_title=Dodawanie i importowanie kontaktów
 import_contacts_button=Importuj
 importing_contacts_progress_button=Importowanie…
+import_contacts_failure_message=Niektóre kontakty nie mogły być zaimportowane. Spróbuj ponownie.
+import_contacts_success_message={{total}} kontakt został zaimportowany.;{{total}} kontakty zostały zaimportowane.;{{total}} kontaktów zostało zaimportowanych.
 sync_contacts_button=Synchronizuj kontakty
 import_failed_description_simple=Import kontaktów nie powiódł się
 import_failed_description_some=Niektóre kontakty nie mogły zostać zaimportowane
