Bug 1119934 - Display (idle) nodes in the flamegraph for the new performance tool

--- a/pl/browser/chrome/browser/devtools/profiler.properties
+++ b/pl/browser/chrome/browser/devtools/profiler.properties
@@ -29,6 +29,7 @@ category.storage=Dane
 category.events=Wprowadzanie i zdarzenia
 
 table.root=(główny węzeł)
+table.idle=(w stanie spoczynku)
 
 table.url.tooltiptext=Wyświetl źródło w debugerze
 table.zoom.tooltiptext=Zbadaj ramkę w nowej karcie
