Bug 941287 - Show optimized out and other missing variables in the debugger variables view with the appropriate message

--- a/pl/browser/chrome/browser/devtools/debugger.properties
+++ b/pl/browser/chrome/browser/devtools/debugger.properties
@@ -220,4 +220,8 @@ functionSearchSeparatorLabel=←
 # resumed first.
 resumptionOrderPanelTitle=Jeden lub wiele debugerów jest wstrzymanych. Należy najpierw przywrócić ostatnio wstrzymany debuger przy: %S
 
+variablesViewOptimizedOut=(zoptymalizowana)
+variablesViewUninitialized=(niezainicjowana)
+variablesViewMissingArgs=(niedostępna)
+
 evalGroupLabel=Interpretowane źródła
