--- a/pl/browser/chrome/browser/browser.properties
+++ b/pl/browser/chrome/browser/browser.properties
@@ -383,6 +383,10 @@ dataReportingNotification.message       = %1$S przesyła automatycznie pewne dan
 dataReportingNotification.button.label  = Wybierz, co udostępniać
 dataReportingNotification.button.accessKey  = W
 
+processHang.message=Strona sprawia, że %1$S działa wolniej.
+processHang.button.label=Ustawienia
+processHang.button.accessKey=U
+
 # Webapps notification popup
 webapps.install = Zainstaluj
 webapps.install.accesskey = Z
