Bug 1055217 - Add front end for bypassing audio nodes in the web audio editor

--- a/pl/browser/chrome/browser/devtools/webaudioeditor.properties
+++ b/pl/browser/chrome/browser/devtools/webaudioeditor.properties
@@ -8,3 +8,5 @@ ToolboxWebAudioEditor1.tooltip=Przeglądarka i edytor kontekstów web audio
 
 collapseInspector=Zmniejsz inspektora
 expandInspector=Powiększ inspektora
+
+webAudioEditorTooltipBypass=Pomiń AudioNode
