--- a/zh-TW/security/manager/chrome/pipnss/nsserrors.properties
+++ b/zh-TW/security/manager/chrome/pipnss/nsserrors.properties
@@ -242,7 +242,7 @@ SEC_ERROR_NOT_FORTEZZA_ISSUER=節點的 FORTEZZA 鏈內含非 FORTEZZA 的憑證
 SEC_ERROR_CANNOT_MOVE_SENSITIVE_KEY=Sensitive 金鑰無法移到所需要的 Slot。
 SEC_ERROR_JS_INVALID_MODULE_NAME=模組名稱無效。
 SEC_ERROR_JS_INVALID_DLL=模組路徑╱檔名無效。
-SEC_ERROR_JS_ADD_MOD_FAILURE=無法加入模組
+SEC_ERROR_JS_ADD_MOD_FAILURE=無法新增模組
 SEC_ERROR_JS_DEL_MOD_FAILURE=無法刪除模組
 SEC_ERROR_OLD_KRL=新金鑰廢止清冊不能比目前的清冊還晚。
 SEC_ERROR_CKL_CONFLICT=新洩漏金鑰清冊和目前的清冊簽發者不同，請刪除目前的洩漏金鑰清冊。
