--- a/zh-TW/security/manager/chrome/pipnss/pipnss.properties
+++ b/zh-TW/security/manager/chrome/pipnss/pipnss.properties
@@ -71,7 +71,7 @@ CertDumpSHA512WithRSA=PKCS #1 SHA-512 加 RSA 加密
 CertDumpDefOID=物件識別符 (%S)
 CertDumpNULL=NULL
 CertDumpIssuer=簽發者
-CertDumpSubject=主旨
+CertDumpSubject=主體
 CertDumpRDN=相對識別名稱 (RDN)
 CertDumpATV=屬性型態與內含值
 CertDumpAVACountry=C
@@ -89,22 +89,22 @@ CertDumpGivenName=名
 CertDumpValidity=有效
 CertDumpNotBefore=不早於
 CertDumpNotAfter=不晚於
-CertDumpSPKI=主公開金鑰資訊
-CertDumpSPKIAlg=主公開金鑰演算法
+CertDumpSPKI=憑證主體公鑰資訊
+CertDumpSPKIAlg=憑證主體公鑰演算法
 CertDumpAlgID=演算法識別符
 CertDumpParams=演算法參數
 CertDumpRSAEncr=PKCS #1 RSA 加密
 CertDumpRSAPSSSignature=PKCS #1 RSASSA-PSS 簽章
-CertDumpRSATemplate=模組 (%S 位元):\n%S\n指數 (%S 位元):\n%S
+CertDumpRSATemplate=模數（%S 位元）:\n%S\n指數 (%S 位元):\n%S
 CertDumpECTemplate=金鑰大小: %S 位元\n基點級數長度 (Base point order length): %S 位元\n公開值:\n%S
 CertDumpIssuerUniqueID=發行者唯一 ID
-CertDumpSubjPubKey=主公開金鑰 (Public key)
-CertDumpSubjectUniqueID=主唯一 ID
+CertDumpSubjPubKey=憑證主體的公鑰
+CertDumpSubjectUniqueID=憑證主體的獨特 ID
 CertDumpExtensions=延伸資訊
-CertDumpSubjectDirectoryAttr=憑證主目錄屬性
-CertDumpSubjectKeyID=憑證主金鑰 ID
+CertDumpSubjectDirectoryAttr=憑證主體目錄屬性
+CertDumpSubjectKeyID=憑證主體金鑰 ID
 CertDumpKeyUsage=憑證金鑰用法
-CertDumpSubjectAltName=憑證主替代名稱
+CertDumpSubjectAltName=憑證主體替代名稱
 CertDumpIssuerAltName=憑證簽署者替代名稱
 CertDumpBasicConstraints=憑證基本限制
 CertDumpNameConstraints=憑證名稱限制
@@ -127,7 +127,7 @@ CertDumpKUCertSign=憑證簽署者
 CertDumpKUCRLSigner=廢止清冊簽署者
 CertDumpCritical=Critical
 CertDumpNonCritical=非 Critical
-CertDumpSigAlg=憑證簽署演算法
+CertDumpSigAlg=憑證簽章演算法
 CertDumpCertSig=憑證簽章值
 CertDumpExtensionFailure=錯誤: 無法處理擴充欄位
 CertDumpIsCA=這是憑證機構
@@ -273,7 +273,7 @@ AddModulePath=路徑: %S
 AddModuleSuccess=已安裝新安全模組
 AddModuleFailure=無法新增模組
 AddModuleDup=安全模組已存在
-DelModuleBadName=錯誤的模組名稱。
+DelModuleBadName=模組名稱無效。
 DelModuleWarning=您確定要刪除此模組？
 DelModuleError=無法刪除模組
 DelModuleIntSuccess=已成功刪除內部安全模組
