--- a/zh-TW/security/manager/chrome/pippki/pippki.properties
+++ b/zh-TW/security/manager/chrome/pippki/pippki.properties
@@ -21,15 +21,15 @@ issuerCertNotFound=找不到此憑證機構的憑證
 
 #For Deleting Certificates
 deleteSslCertConfirm3=您確定要刪除這些例外伺服器嗎？
-deleteSslCertImpact3=如果您刪除了例外伺服器，下次您再瀏覽該伺服器時又會再次被要求提供有效的憑證。
-deleteSslCertTitle3=刪除例外伺服器
+deleteSslCertImpact3=如果您刪除了例外伺服器，下次您再瀏覽該伺服器時又會收到伺服器憑證無效的提示。
+deleteSslCertTitle3=刪除伺服器憑證例外
 
 deleteUserCertConfirm=您確定要刪除這些憑證嗎？
 deleteUserCertImpact=如果您刪除了您自己的憑證，您就再也不能用它來識別您自己了。
 deleteUserCertTitle=刪除您的憑證
 
 deleteCaCertConfirm2=您要求刪除這些憑證機構的憑證。對內建的憑證來說，移除您對該憑證的信任也有一樣的效果。您確定想刪除或取消對憑證的信任嗎？
-deleteCaCertImpactX2=若您刪除或取消對憑證機構（CA）的信任，此應用程式將不再信任任何經由該機構所簽發的憑證。
+deleteCaCertImpactX2=若您刪除或取消對憑證機構（CA）的信任，此應用程式將不再信任任何由該機構簽發的憑證。
 deleteCaCertTitle2=刪除或取消信任憑證機構的憑證
 
 deleteEmailCertConfirm=您確定要刪除這些人的 E-mail 憑證嗎？
@@ -105,8 +105,8 @@ devinfo_modpath=路徑
 devinfo_label=標籤
 devinfo_manID=製造者
 devinfo_serialnum=序號
-devinfo_hwversion=HW 版本
-devinfo_fwversion=FW 版本
+devinfo_hwversion=硬體版本
+devinfo_fwversion=韌體版本
 devinfo_status=狀態
 devinfo_desc=描述
 devinfo_stat_disabled=不使用
