[th] update from Pootle (mobile)

--- a/th/browser/chrome/browser/devtools/scratchpad.properties
+++ b/th/browser/chrome/browser/devtools/scratchpad.properties
@@ -32,8 +32,9 @@ openFile.title=เปิดแฟ้ม
 # open fails.
 openFile.failed=อ่านแฟ้มไม่ได้
 
-# LOCALIZATION NOTE  (openFile.failed): This is the message displayed when file
-# open fails.
+# LOCALIZATION NOTE  (importFromFile.convert.failed): This is the message
+# displayed when file conversion from some charset to Unicode fails.
+# %1 is the name of the charset from which the conversion failed.
 
 # LOCALIZATION NOTE (clearRecentMenuItems.label): This is the label for the
 # menuitem in the 'Open Recent'-menu which clears all recent files.
