--- a/th/mobile/android/chrome/webapp.properties
+++ b/th/mobile/android/chrome/webapp.properties
@@ -50,3 +50,4 @@ retrievalFailedTitle=อัพเดต #1 ล้มเหลว;อัพเด
 # %1$S is a comma-separated list of apps for which retrieval failed.
 # example: Failed to retrieve updates for Foo, Bar, Baz
 
+webappsDisabled=การติดตั้งแอพถูกปิด
