--- a/th/browser/chrome/browser/devtools/timeline.properties
+++ b/th/browser/chrome/browser/devtools/timeline.properties
@@ -32,6 +32,7 @@ timeline.tick=%S ms
 
 # LOCALIZATION NOTE (timeline.label.*):
 # These strings are displayed in the timeline waterfall, identifying markers.
+# We want to use the same wording as Google Chrome
 timeline.label.consoleTime=คอนโซล
 
 # LOCALIZATION NOTE (graphs.memory):
@@ -49,3 +50,4 @@ timeline.markerDetailFormat=%1$S (%2$S)
 # LOCALIZATION NOTE (time.markerDetail.*):
 # Strings used in the waterfall sidebar.
 timeline.markerDetail.start=เริ่ม:
+timeline.markerDetail.stack=สแต็ก:
