--- a/th/browser/chrome/browser/preferences/preferences.properties
+++ b/th/browser/chrome/browser/preferences/preferences.properties
@@ -92,6 +92,13 @@ cannot=บล็อก
 noCookieSelected=<ยังไม่เลือกคุกกี้>
 cookiesAll=คุกกี้เหล่านี้เก็บอยู่ในคอมพิวเตอร์เครื่องนี้ :
 cookiesFiltered=คุกกี้เหล่านี้ตรงกับคำค้นที่ป้อน :
+# LOCALIZATION NOTE (removeSelectedCookies):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# If you need to display the number of selected elements in your language,
+# you can use #1 in your localization as a placeholder for the number.
+# For example this is the English string with numbers:   
+# removeSelectedCookied=Remove #1 Selected;Remove #1 Selected
 
 #### Offline apps
 offlineAppsList.height=7em
@@ -137,9 +144,3 @@ syncUnlinkConfirm.label=ยกเลิกการเชื่อมโยง
 featureEnableRequiresRestart=%S ต้องเริ่มทำงานใหม่เพื่อเปิดใช้คุณสมบัตินี้
 featureDisableRequiresRestart=%S ต้องเริ่มทำงานใหม่เพื่อปิดการใช้คุณสมบัตินี้
 shouldRestartTitle=เริ่มการทำงาน %S ใหม่
-
-###Preferences::Sync::Firefox Accounts
-firefoxAccountsVerificationSentTitle=การตรวจความถูกต้องถูกส่งไปแล้ว
-# LOCALIZATION NOTE: %S = user's email address.
-firefoxAccountsVerificationSentHeading=ลิงก์ตรวจความถูกต้องถูกส่งไปแล้วที่ %S
-firefoxAccountVerificationSentDescription=โปรดเช็คอีเมลของคุณและคลิกลิงก์เพื่อเริ่มต้นการซิงก์
