--- a/th/browser/chrome/browser/shellservice.properties
+++ b/th/browser/chrome/browser/shellservice.properties
@@ -17,7 +17,7 @@ setDefaultBrowserNotNow.accesskey  = ม
 setDefaultBrowserNever.label       = ไม่ต้องถามฉันอีก
 setDefaultBrowserNever.accesskey   = ม
 
-# LOCALIZATION NOTE (setDefaultBrowserTitle, setDefaultBrowserMessage, setDefaultBrowserDontAsk):
+# LOCALIZATION NOTE (setDefaultBrowserTitle, setDefaultBrowserMessage, setDefaultBrowserDontAsk, setDefaultBrowserAlertConfirm.label, setDefaultBrowserAlertNotNow.label):
 # These strings are used as an alternative to the ones above, in a modal dialog.
 # %S will be replaced by brandShortName
 setDefaultBrowserTitle=เบราเซอร์ปริยาย
