--- a/th/dom/chrome/security/security.properties
+++ b/th/dom/chrome/security/security.properties
@@ -9,4 +9,8 @@ BlockMixedActiveContent = ปิดกั้นการโหลดเนื้
 InvalidSTSHeaders=เว็บไซต์นี้ระบุเฮดเดอร์ Strict-Transport-Security ผิด
 # LOCALIZATION NOTE: Do not translate "Public-Key-Pins or HPKP"
 # LOCALIZATION NOTE: Do not translate "SHA-1"
+# LOCALIZATION NOTE: "%1$S" is the URI of the insecure mixed content resource
 # LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
+
+# LOCALIZATION NOTE: Do not translate "SSL 3.0".
+# LOCALIZATION NOTE: Do not translate "RC4".
