--- a/th/mobile/android/chrome/aboutHome.properties
+++ b/th/mobile/android/chrome/aboutHome.properties
@@ -2,3 +2,4 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+banner.firstrunHomepage.text=ยินดีต้อนรับสู่โฮมเพจของคุณ! คุณจะกลับมาที่นี่คุณครั้งที่เปิดแท็บใหม่
