Aviary.pl bug 2301 - zapamiętane (hasła) vs zapisane (hasła)

--- a/pl/editor/ui/chrome/composer/editor.properties
+++ b/pl/editor/ui/chrome/composer/editor.properties
@@ -22,7 +22,7 @@ Preview=Podgląd
 Publish=Opublikuj
 PublishPage=Opublikuj stronę
 DontPublish=Nie publikuj
-SavePassword=Użyj Menedżera haseł, aby zapamiętać to hasło.
+SavePassword=Użyj Menedżera haseł, aby zachować to hasło.
 CorrectSpelling=(poprawna pisownia)
 NoSuggestedWords=(brak sugerowanych słów)
 NoMisspelledWord=Żadnych błędnych słów
