--- a/pl/mobile/overrides/passwordmgr.properties
+++ b/pl/mobile/overrides/passwordmgr.properties
@@ -20,6 +20,6 @@ userSelectText=Wybierz użytkownika, którego hasło zostanie zmienione
 passwordChangeTitle=Potwierdź zmianę hasła
 
 # Strings used by PromptService.js
-rememberPassword=Użyj Menedżera haseł, aby zapamiętać to hasło.
+rememberPassword=Użyj Menedżera haseł, aby zachować to hasło.
 username=Nazwa użytkownika
 password=Hasło
