[pt-BR] update from Pootle (seamonkey)

--- a/pt-BR/browser/chrome/browser/devtools/projecteditor.properties
+++ b/pt-BR/browser/chrome/browser/devtools/projecteditor.properties
@@ -46,6 +46,10 @@ projecteditor.deleteFilePromptMessage=Tem certeza que deseja excluir este arquiv
 # the directory.
 projecteditor.newLabel=Novo…
 
+# LOCALIZATION NOTE (projecteditor.renameLabel):
+# This string is displayed as a menu item for renaming a file in
+# the directory.
+
 # LOCALIZATION NOTE (projecteditor.saveLabel):
 # This string is displayed as a menu item for saving the current file.
 projecteditor.saveLabel=Salvar
