--- a/pt-BR/browser/chrome/browser/devtools/timeline.properties
+++ b/pt-BR/browser/chrome/browser/devtools/timeline.properties
@@ -35,10 +35,8 @@ timeline.records=RECORDS
 
 # LOCALIZATION NOTE (timeline.label.*):
 # These strings are displayed in the timeline waterfall, identifying markers.
-timeline.label.styles=Estilos
-timeline.label.reflow=Reflows
+# We want to use the same wording as Google Chrome
 timeline.label.paint=Pintar
-timeline.label.javascript=Javascript
 timeline.label.domevent=Evento DOM
 timeline.label.consoleTime=Console
 
@@ -65,3 +63,4 @@ timeline.markerDetail.DOMEventPhase=Fase:
 timeline.markerDetail.DOMEventTargetPhase=Destino
 timeline.markerDetail.DOMEventCapturingPhase=Capturar
 timeline.markerDetail.DOMEventBubblingPhase=Bubbling
+timeline.markerDetail.stack=Pilha:
