--- a/pt-BR/browser/chrome/browser/loop/loop.properties
+++ b/pt-BR/browser/chrome/browser/loop/loop.properties
@@ -225,6 +225,10 @@ peer_ended_conversation2=A pessoa chamada encerrou a conversa.
 conversation_has_ended=Sua conversa foi encerrada.
 restart_call=Reconectar
 
+## LOCALIZATION NOTE (contact_unavailable_title): The title displayed
+## when a contact is unavailable. Don't translate the part between {{..}}
+## because this will be replaced by the contact's name.
+
 generic_failure_title=Algo deu errado.
 generic_failure_with_reason2=Você pode tentar de novo ou enviar por email um link para tentar mais tarde.
 generic_failure_no_reason2=Deseja tentar de novo?
@@ -270,7 +274,6 @@ feedback_category_audio_quality=Qualidade de áudio
 feedback_category_video_quality=Qualidade de vídeo
 feedback_category_was_disconnected=Foi desconectado
 feedback_category_confusing=Embaraçoso
-feedback_category_other=Outro:
 feedback_custom_category_text_placeholder=O que deu errado?
 feedback_submit_button=Enviar
 feedback_back_button=Voltar
