--- a/pt-BR/suite/chrome/common/places/places.properties
+++ b/pt-BR/suite/chrome/common/places/places.properties
@@ -2,6 +2,13 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+delete.hostname.true=Apagar histórico para %S
+delete.hostname.false=Apagar histórico para o site
+delete.hostname.accesskey=s
+delete.domain.true=Apagar histórico para *.%S
+delete.domain.false=Apagar histórico para o domínio
+delete.domain.accesskey=H
+
 load-js-data-url-error=Por razões de segurança, URLs "javascript:" e "data:" não podem ser carregadas a partir da janela ou do painel de histórico.
 noTitle=(sem título)
 
@@ -13,7 +20,6 @@ bookmarksRestoreAlertTitle=Reverter favoritos
 bookmarksRestoreAlert=Isso irá substituir todos os seus favoritos atuais pelo backup. Tem certeza disso?
 bookmarksRestoreTitle=Selecionar um backup de favoritos
 bookmarksRestoreFilterName=JSON
-bookmarksRestoreFilterExtension=*.json
 
 bookmarksRestoreFormatError=Tipo de arquivo não suportado.
 bookmarksRestoreParseError=Não foi possível processar o arquivo de backup.
