--- a/pt-BR/browser/chrome/browser/devtools/scratchpad.properties
+++ b/pt-BR/browser/chrome/browser/devtools/scratchpad.properties
@@ -32,8 +32,9 @@ openFile.title=Abrir arquivo
 # open fails.
 openFile.failed=Falha ao abrir o arquivo.
 
-# LOCALIZATION NOTE  (openFile.failed): This is the message displayed when file
-# open fails.
+# LOCALIZATION NOTE  (importFromFile.convert.failed): This is the message
+# displayed when file conversion from some charset to Unicode fails.
+# %1 is the name of the charset from which the conversion failed.
 importFromFile.convert.failed=Falha ao converter arquivo para Unicode de %1$S.
 
 # LOCALIZATION NOTE (clearRecentMenuItems.label): This is the label for the
