--- a/pt-BR/browser/chrome/browser/preferences/preferences.properties
+++ b/pt-BR/browser/chrome/browser/preferences/preferences.properties
@@ -92,6 +92,13 @@ cannot=Bloquear
 noCookieSelected=<nenhum cookie selecionado>
 cookiesAll=Estes cookies estão armazenados no seu computador:
 cookiesFiltered=Estes cookies satisfazem a sua pesquisa:
+# LOCALIZATION NOTE (removeSelectedCookies):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# If you need to display the number of selected elements in your language,
+# you can use #1 in your localization as a placeholder for the number.
+# For example this is the English string with numbers:   
+# removeSelectedCookied=Remove #1 Selected;Remove #1 Selected
 
 #### Offline apps
 offlineAppsList.height=7em
@@ -137,9 +144,3 @@ syncUnlinkConfirm.label=Desconectar
 featureEnableRequiresRestart=O %S precisa reiniciar para ativar este recurso.
 featureDisableRequiresRestart=O %S precisa reiniciar para desativar este recurso.
 shouldRestartTitle=Reiniciar o %S
-
-###Preferences::Sync::Firefox Accounts
-firefoxAccountsVerificationSentTitle=Confirmação enviada
-# LOCALIZATION NOTE: %S = user's email address.
-firefoxAccountsVerificationSentHeading=Um link de confirmação foi enviado para %S
-firefoxAccountVerificationSentDescription=Por favor, verifique seu email e clique no link para iniciar a sincronização.
