--- a/pt-BR/browser/chrome/browser/shellservice.properties
+++ b/pt-BR/browser/chrome/browser/shellservice.properties
@@ -17,7 +17,7 @@ setDefaultBrowserNotNow.accesskey  = A
 setDefaultBrowserNever.label       = Não perguntar de novo
 setDefaultBrowserNever.accesskey   = N
 
-# LOCALIZATION NOTE (setDefaultBrowserTitle, setDefaultBrowserMessage, setDefaultBrowserDontAsk):
+# LOCALIZATION NOTE (setDefaultBrowserTitle, setDefaultBrowserMessage, setDefaultBrowserDontAsk, setDefaultBrowserAlertConfirm.label, setDefaultBrowserAlertNotNow.label):
 # These strings are used as an alternative to the ones above, in a modal dialog.
 # %S will be replaced by brandShortName
 setDefaultBrowserTitle=Navegador padrão
