--- a/sq/browser/chrome/browser/devtools/webconsole.properties
+++ b/sq/browser/chrome/browser/devtools/webconsole.properties
@@ -16,7 +16,7 @@ typeException=Përjashtim:
 typeCssParser=Përtypës CSS: 
 typeStrict=Sinjalizim Strikt: 
 msgCategory=Kategori: 
-errLine=Line: %S
+errLine=Rresht: %S
 btnHide=Fshihe
 btnPrefs=Parapëlqime
 categoryPage=Faqe:
