--- a/sq/dom/chrome/layout/MediaDocument.properties
+++ b/sq/dom/chrome/layout/MediaDocument.properties
@@ -18,7 +18,7 @@ ImageTitleWithNeitherDimensionsNorFile=(Figurë %S)
 MediaTitleWithFile=%S (Objekt %S)
 MediaTitleWithNoInfo=(Objekt %S)
 
-InvalidImage=The image \u201c%S\u201d cannot be displayed because it contains errors.
+InvalidImage=Figura \u201c%S\u201d nuk mund të shfaqet, ngaqë përmban gabime.
 ScaledImage=Ripërmasuar (%S%%)
 
 TitleWithStatus=%S - %S
