--- a/sq/dom/chrome/layout/css.properties
+++ b/sq/dom/chrome/layout/css.properties
@@ -130,7 +130,7 @@ PEFFVExpectedIdent=Pritej identifikues, por u gjet '%1$S'.
 PEFFVExpectedValue=Pritej vlerë e plotë jonegative, por u gjet '%1$S'.
 PEFFVGenericInFamilyList=Lista e familjes nuk mund të përmbajë emër të përgjithshëm familjeje shkronjash.
 PEFFVNoFamily=Pritej listë familjeje shkronjash për rregullin @font-feature-values, por u gjet '%1$S'.
-PEFFVTooManyValues=Too many values for feature type '%1$S'.
+PEFFVTooManyValues=Shumë vlera për llojin e veçorisë '%1$S'.
 PEFFVUnexpectedBlockEnd=Pritej '}' në fund të rregullit @font-feature-values, por u gjet '%1$S'.
 PEFFVUnexpectedEOF=Fund i papritur i rregullit @font-feature-values.
 PEFFVUnknownFontVariantPropValue=Vlerë e panjohur vetie font-variant '%1$S'.
