--- a/sq/mobile/android/chrome/pippki.properties
+++ b/sq/mobile/android/chrome/pippki.properties
@@ -25,7 +25,7 @@ clientAuthAsk.organization=Organizim: "%S"
 clientAuthAsk.issuer=Lëshuar Nën: "%S"
 clientAuthAsk.viewCert.label=Shiheni
 
-certmgr.title=Certificate Details
+certmgr.title=Hollësi Dëshmie
 # These strings are stolen from security/manager/locales/en-US/chrome/pippki/certManager.dtd
 certmgr.subjectinfo.label=Lëshuar Për
 certmgr.issuerinfo.label=Lëshuar nga
