[th] update from Pootle (mobile)

--- a/th/mobile/android/chrome/browser.properties
+++ b/th/mobile/android/chrome/browser.properties
@@ -199,7 +199,7 @@ casting.sendToDevice=ส่งไปยังอุปกรณ์
 # Context menu
 contextmenu.openInNewTab=เปิดลิงก์ในแท็บใหม่
 contextmenu.openInPrivateTab=เปิดลิงก์ในแท็บส่วนตัว
-contextmenu.addToReadingList=เพิ่งเข้ารายการอ่าน
+contextmenu.addToReadingList=เพิ่มเข้ารายการอ่าน
 contextmenu.share=แบ่งปัน
 contextmenu.copyLink=คัดลอกลิงก์
 contextmenu.shareLink=แบ่งปันลิงก์
