[ta] update from Pootle (firefox)

--- a/ta/browser/chrome/browser/loop/loop.properties
+++ b/ta/browser/chrome/browser/loop/loop.properties
@@ -228,6 +228,8 @@ restart_call=மீட்டுணை
 ## LOCALIZATION NOTE (contact_unavailable_title): The title displayed
 ## when a contact is unavailable. Don't translate the part between {{..}}
 ## because this will be replaced by the contact's name.
+contact_unavailable_title={{contactName}} இல்லை.
+generic_contact_unavailable_title=இந்த நபர் கிடைக்கவில்லை.
 
 generic_failure_title=ஏதோ தவறு நிகழ்ந்தது.
 generic_failure_with_reason2=நீங்கள் மறுமுயற்சி செய்யலாம் அல்லது பிறகு மின்னஞ்சல் தொடுப்பை அனுப்பி வைக்கவும்.\u0020
@@ -274,6 +276,7 @@ feedback_category_audio_quality=ஒலி தரம்
 feedback_category_video_quality=காணொளி தரம்
 feedback_category_was_disconnected=துண்டிக்கப்பட்டது
 feedback_category_confusing=குழப்புகிறது
+feedback_category_other2=பிற:
 feedback_custom_category_text_placeholder=தவறானது என்ன?
 feedback_submit_button=சமர்ப்பி
 feedback_back_button=பின்
