--- a/ta/dom/chrome/security/security.properties
+++ b/ta/dom/chrome/security/security.properties
@@ -16,8 +16,12 @@ InsecurePasswordsPresentOnPage=கடவுச்சொல் புலங்க
 InsecureFormActionPasswordsPresent=கடவுச்சொல் புலங்கள் ஒரு பாதுகாப்பற்ற (http://) படிவ செயலைக் கொண்டுள்ள ஒரு படிவத்தில் உள்ளன. இது பயனரின் புகுபதிவு அங்கீகாரச் சான்றுகளைத் திருடக்கூடிய வாய்ப்புள்ள ஒரு பாதுகாப்பு தொடர்பான ஆபத்தாகும்.
 InsecurePasswordsPresentOnIframe=கடவுச்சொல் புலங்கள் ஒரு பாதுகாப்பற்ற (http://) iframe இல் உள்ளன. இது பயனரின் புகுபதிவு அங்கீகாரச் சான்றுகளைத் திருடக்கூடிய வாய்ப்புள்ள ஒரு பாதுகாப்பு தொடர்பான ஆபத்தாகும்.
 # LOCALIZATION NOTE: "%1$S" is the URI of the insecure mixed content resource
+LoadingMixedActiveContent2=ஒரு பாதுகாப்பான பக்கத்தில் செயலிலுள்ள கலப்பான (பாதுகாப்பற்ற) உள்ளடக்கத்தை "%1$S" ஏற்றுகிறது
+LoadingMixedDisplayContent2=ஒரு பாதுகாப்பான பக்கத்தில் கலப்பான (பாதுகாப்பற்ற) காட்சி உள்ளடக்கத்தை "%1$S" ஏற்றுகிறது
 # LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
 BothAllowScriptsAndSameOriginPresent=ஒரு iframe ஆனது allow-scripts மற்றும் allow-same-origin sandbox பண்புக் கூறுக்கு வைத்திருந்தால் அதன் sandboxing நீக்க முடியும்.
 
 # LOCALIZATION NOTE: Do not translate "SSL 3.0".
+WeakProtocolVersionWarning=இந்த வலைத்தளம் மறைகுறியாக்கத்திற்கு SSL 3.0 நெறிமுறையைப் பயன்படுத்துகிறது, அது பாதுகாப்பற்றது காலாவதியானது.
 # LOCALIZATION NOTE: Do not translate "RC4".
+WeakCipherSuiteWarning=இந்த வலைத்தளம் மறைகுறியாக்கத்திற்கு RC4 நெறிமுறையைப் பயன்படுத்துகிறது, அது பாதுகாப்பற்றது காலாவதியானது.
