--- a/ta/browser/chrome/browser/browser.properties
+++ b/ta/browser/chrome/browser/browser.properties
@@ -374,6 +374,7 @@ safebrowsing.notAnAttackButton.accessKey=ஒ
 # LOCALIZATION NOTE (ctrlTab.listAllTabs.label): #1 represents the number
 # of tabs in the current browser window. It will always be 2 at least.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+ctrlTab.listAllTabs.label=;#1 இன் கீற்றுகளை பட்டியலிடு
 
 # LOCALIZATION NOTE (addKeywordTitleAutoFill): %S will be replaced by the page's title
 # Used as the bookmark name when saving a keyword for a search field.
