--- a/ta/browser/chrome/browser/devtools/netmonitor.properties
+++ b/ta/browser/chrome/browser/devtools/netmonitor.properties
@@ -32,14 +32,17 @@ netmonitor.tooltip=பிணைய கண்காணிப்பு
 # LOCALIZATION NOTE (netmonitor.security.state.secure)
 # This string is used as an tooltip for request that was performed over secure
 # channel i.e. the connection was encrypted.
+netmonitor.security.state.secure=இவ்வளத்தை எடுப்பதற்காக பயன்படுத்திய இணைப்பு பாதுகாப்பானது.
 
 # LOCALIZATION NOTE (netmonitor.security.state.insecure)
 # This string is used as an tooltip for request that was performed over insecure
 # channel i.e. the connection was not encrypted.
+netmonitor.security.state.insecure=இவ்வளத்தை எடுப்பதற்காக பயன்படுத்திய இணைப்பு மறைகுறியாக்கப்படவில்லை.
 
 # LOCALIZATION NOTE (netmonitor.security.state.broken)
 # This string is used as an tooltip for request that failed due to security
 # issues.
+netmonitor.security.state.broken=வளம் ஏற்றப்படுவதை ஒரு பாதுகாப்பு பிழை தடுத்துவிட்டது.
 
 # LOCALIZATION NOTE (netmonitor.security.enabled):
 # This string is used to indicate that a specific security feature is used by
@@ -57,12 +60,14 @@ netmonitor.security.disabled=செயல்நீக்கு
 # This string is used as a header for section containing security information
 # related to the remote host. %S is replaced with the domain name of the remote
 # host. For example: Host example.com
+netmonitor.security.hostHeader=புரவலன் %S:
 
 # LOCALIZATION NOTE (netmonitor.security.notAvailable):
 # This string is used to indicate that a certain piece of information is not
 # available to be displayd. For example a certificate that has no organization
 # defined:
 #   Organization: <Not Available>
+netmonitor.security.notAvailable=<கிடைக்கவில்லை>
 
 # LOCALIZATION NOTE (collapseDetailsPane): This is the tooltip for the button
 # that collapses the network details pane in the UI.
