--- a/ta/browser/chrome/browser/devtools/projecteditor.properties
+++ b/ta/browser/chrome/browser/devtools/projecteditor.properties
@@ -49,6 +49,7 @@ projecteditor.newLabel=புதிய…
 # LOCALIZATION NOTE (projecteditor.renameLabel):
 # This string is displayed as a menu item for renaming a file in
 # the directory.
+projecteditor.renameLabel=மறுபெயரிடு
 
 # LOCALIZATION NOTE (projecteditor.saveLabel):
 # This string is displayed as a menu item for saving the current file.
