--- a/ta/browser/chrome/browser/devtools/timeline.properties
+++ b/ta/browser/chrome/browser/devtools/timeline.properties
@@ -36,7 +36,10 @@ timeline.records=பதிவுகள்
 # LOCALIZATION NOTE (timeline.label.*):
 # These strings are displayed in the timeline waterfall, identifying markers.
 # We want to use the same wording as Google Chrome
+timeline.label.styles2=பாங்கை மறுகணக்கிடு
+timeline.label.reflow2=வடிவம்
 timeline.label.paint=பூச்சு
+timeline.label.javascript2=செயலாற்றி அழைப்பு
 timeline.label.domevent=DOM நிகழ்வு
 timeline.label.consoleTime=பணிமுனை
 
@@ -64,3 +67,6 @@ timeline.markerDetail.DOMEventTargetPhase=இலக்கு
 timeline.markerDetail.DOMEventCapturingPhase=கைப்பற்று
 timeline.markerDetail.DOMEventBubblingPhase=குமிழ்தல்
 timeline.markerDetail.stack=ஸ்டேக்:
+timeline.markerDetail.startStack=துவக்கத்தில் அடுக்கு:
+timeline.markerDetail.endStack=முடிவில் அடுக்கு:
+timeline.markerDetail.unknownFrame=<அறியாத இடம்>
