--- a/ta/browser/chrome/browser/shellservice.properties
+++ b/ta/browser/chrome/browser/shellservice.properties
@@ -23,6 +23,8 @@ setDefaultBrowserNever.accesskey   = D
 setDefaultBrowserTitle=இயல்பான உலாவி
 setDefaultBrowserMessage=%S உங்கள் இயல்பான உலாவியாக தற்போது அமைக்கப்படவில்லை. இதை உங்கள் இயல்பான உலாவியாக அமைக்க விருப்பமா?
 setDefaultBrowserDontAsk=%S ஐ துவக்கும் போதெல்லாம் இந்த சோதனையை செய்யவும்.
+setDefaultBrowserAlertConfirm.label=\u0020என் முன்னிருப்பு உலாவியாக %S ஐப் பயன்படுத்தவும்
+setDefaultBrowserAlertNotNow.label=இப்போது வேண்டாம்
 
 desktopBackgroundLeafNameWin=Desktop Background.bmp
 DesktopBackgroundDownloading=படத்தை சேமிக்கிறது...
