[th] update from Pootle (mobile)

--- a/th/mobile/android/chrome/aboutPasswords.properties
+++ b/th/mobile/android/chrome/aboutPasswords.properties
@@ -3,3 +3,6 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 
+passwordsDetails.copyFailed=การคัดลอกล้มเหลว
+passwordsDetails.passwordCopied=รหัสผ่านถูกคัดลอก
+passwordsDetails.usernameCopied=ชื่อผู้ใช้ถูกคัดลอก
