--- a/th/mobile/android/chrome/browser.properties
+++ b/th/mobile/android/chrome/browser.properties
@@ -12,6 +12,7 @@ alertAddonsInstalledNoRestart.message=ติดตั้งสำเร็จ
 
 # LOCALIZATION NOTE (alertAddonsInstalledNoRestart.action2): Ideally, this string is short (it's a
 # button label) and upper-case, to match Google and Android's convention.
+alertAddonsInstalledNoRestart.action2=ส่วนเสริม
 
 alertDownloadsStart2=กำลังเริ่มดาวน์โหลด…
 alertDownloadsDone2=การดาวน์โหลดเสร็จสิ้น
@@ -120,21 +121,31 @@ contacts.ask=อนุญาตให้ %S เข้าถึงรายชื
 contacts.dontAskAgain=ไม่ต้องถามอีกสำหรับเว็บนี้
 
 # Device Storage API
+deviceStorageMusic.allow=อนุญาต
+deviceStorageMusic.dontAllow=ไม่อนุญาต
 deviceStorageMusic.ask=อนุญาติ %S ให้เข้าถึงเพลงของคุณ?
 # LOCALIZATION NOTE (deviceStorageMusic.dontAskAgain): This label appears next to a
 # checkbox to indicate whether or not the user wants to make a permanent decision.
 
+deviceStoragePictures.dontAllow=ไม่อนุญาต
 deviceStoragePictures.ask=อนุญาตให้ %S เจ้าถึงภาพของคุณ
 # LOCALIZATION NOTE (deviceStoragePictures.dontAskAgain): This label appears next to a
 # checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStoragePictures.dontAskAgain=ไม่ต้องถามอีกสำหรับเว็บไซต์นี้
 
+deviceStorageSdcard.allow=อนุญาต
+deviceStorageSdcard.dontAllow=ไม่อนุญาต
 deviceStorageSdcard.ask=อนุญาตให้ %S เข้าถึงที่เก็บข้อมูลภายนอก?
 # LOCALIZATION NOTE (deviceStorageSdcard.dontAskAgain): This label appears next to a
 # checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageSdcard.dontAskAgain=ไม่ต้องถามอีกสำหรับเว็บไซต์นี้
 
+deviceStorageVideos.allow=อนุญาต
+deviceStorageVideos.dontAllow=ไม่อนุญาต
 deviceStorageVideos.ask=อนุญาตให้ %S เข้าถึงวิดีโอของคุณ?
 # LOCALIZATION NOTE (deviceStorageVideos.dontAskAgain): This label appears next to a
 # checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageVideos.dontAskAgain=ไม่ต้องถามอีกสำหรับเว็บไซต์นี้
 
 # New Tab Popup
 # LOCALIZATION NOTE (newtabpopup, newprivatetabpopup): Semicolon-separated list of plural forms.
@@ -145,6 +156,7 @@ newprivatetabpopup.opened=แท็บส่วนตัวใหม่ถูก
 
 # LOCALIZATION NOTE (newtabpopup.switch): Ideally, this string is short (it's a
 # button label) and upper-case, to match Google and Android's convention.
+newtabpopup.switch=สลับ
 
 # Undo close tab toast
 # LOCALIZATION NOTE (undoCloseToast.message): This message appears in a toast
@@ -333,6 +345,7 @@ getUserMedia.videoSource.default = กล้อง %S
 getUserMedia.videoSource.frontCamera = กล้องหน้า
 getUserMedia.videoSource.backCamera = กล้องหลัง
 getUserMedia.videoSource.none = ไม่พบวิดีโอ
+getUserMedia.videoSource.prompt = แหล่งที่มาวิดีโอ
 getUserMedia.audioDevice.default = ไมโครโฟน %S
 getUserMedia.audioDevice.none = ไม่มีเสียง
 getUserMedia.audioDevice.prompt = ไมโครโฟนที่จะใช้
@@ -351,6 +364,7 @@ openInApp.cancel = ยกเลิก
 
 #Tab sharing
 #Tabs in context menus
+browser.menu.context.default = ลิงก์
 browser.menu.context.img = รูปภาพ
 browser.menu.context.video = วิดีโอ
 browser.menu.context.audio = เสียง
@@ -359,6 +373,7 @@ browser.menu.context.mailto = จดหมาย
 
 # "Subscribe to page" prompts created in FeedHandler.js
 feedHandler.chooseFeed=เลือกฟีด
+feedHandler.subscribeWith=บอกรับกับ
 
 # LOCALIZATION NOTE (nativeWindow.deprecated):
 # This string is shown in the console when someone uses deprecated NativeWindow apis.
