--- a/th/mobile/android/chrome/pippki.properties
+++ b/th/mobile/android/chrome/pippki.properties
@@ -34,5 +34,6 @@ certmgr.certdetail.cn=ชื่อสามัญ (CN)
 certmgr.certdetail.o=องค์กร (O)
 certmgr.certdetail.ou=หน่วยงาน (OU)
 certmgr.certdetail.serialnumber=เลขอนุกรม
+certmgr.certdetail.sha256fingerprint=ลายนิ้วมือ SHA-256
 certmgr.certdetail.sha1fingerprint=ลายนิ้วมือ SHA1
 certmgr.expires=หมดอายุเมื่อ
