--- a/nb-NO/dom/chrome/security/security.properties
+++ b/nb-NO/dom/chrome/security/security.properties
@@ -15,7 +15,13 @@ SHA1Sig=Denne siden bruker et SHA-1-sertifikat. Det anbefales at du bruker serti
 InsecurePasswordsPresentOnPage=Passordfelt vises på en usikker (http://) side. Dette er en sikkerhetsrisiko som medfører risiko for at brukerinformasjon kan stjeles.
 InsecureFormActionPasswordsPresent=Passordfelt vises i et skjema med usikker (http://) skjemahandling. Dette er en sikkerhetsrisiko som medfører risiko for at brukerinformasjon kan stjeles.
 InsecurePasswordsPresentOnIframe=Passordfelt vises på en usikker (http://) iframe. Dette er en sikkerhetsrisiko som medfører risiko for at brukerinformasjon kan stjeles.
-LoadingMixedActiveContent=Innlasting av mikset (usikkert) aktivt innhold på en sikker side «%1$S»
-LoadingMixedDisplayContent=Innlasting av mikset (usikkert) visningsinnhold på en sikker side «%1$S»
+# LOCALIZATION NOTE: "%1$S" is the URI of the insecure mixed content resource
+LoadingMixedActiveContent2=Innlasting av mikset (usikkert) aktivt innhold «%1$S» på en sikker side
+LoadingMixedDisplayContent2=Innlasting av mikset (usikkert) visningsinnhold «%1$S» på en sikker side
 # LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
 BothAllowScriptsAndSameOriginPresent=En iframe som har både allow-scripts og allow-same-origin i sin sandbox-attributt kan oppheve sandboxingen.
+
+# LOCALIZATION NOTE: Do not translate "SSL 3.0".
+WeakProtocolVersionWarning=Dette nettstedet bruker protokollen SSL 3.0 for kryptering, som er foreldet og usikker.
+# LOCALIZATION NOTE: Do not translate "RC4".
+WeakCipherSuiteWarning=Dette nettstedet bruker krypteringsmetoden RC4 for kryptering, som er foreldet og usikkert.
